# cpp_consume

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
cmake/: quality.cmake  test.cmake  toolchain.cmake
configure/: command
src/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt  Circle.hpp  Step_3.svelte  Step_3Main.svelte  Step_4Input.svelte  Step_4Main.svelte  step_1.cpp  step_2.cpp  step_3.cpp  step_4.cpp  step_5.cpp  step_5_input
